--- a/app/src/main/res/layout/activity_backpackexpansion.xml
+++ b/app/src/main/res/layout/activity_backpackexpansion.xml
@@ -12,6 +12,70 @@
         app:cn_leftImage="@mipmap/base_title_back"
         app:cn_titleText="@string/pointtocard_text19" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_12"
+        android:layout_marginTop="@dimen/dp_14"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_one"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="用户余额："
+            android:textColor="@color/color_333"
+            android:textSize="@dimen/sp_14" />
+
+        <TextView
+            android:id="@+id/tv_two"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="我使用的数量："
+            android:textColor="@color/color_333"
+            android:textSize="@dimen/sp_14" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_12"
+        android:layout_marginTop="@dimen/dp_14"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_three"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="我拥有的数量："
+            android:textColor="@color/color_333"
+            android:textSize="@dimen/sp_14" />
+
+        <TextView
+            android:id="@+id/tv_four"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="暂存格子数量:"
+            android:textColor="@color/color_333"
+            android:textSize="@dimen/sp_14" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_five"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_12"
+        android:layout_marginTop="@dimen/dp_14"
+        android:text="扩容价格："
+        android:textColor="@color/color_333"
+        android:textSize="@dimen/sp_14" />
+
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
