--- a/app/src/main/res/layout/fragment_goldscroll.xml
+++ b/app/src/main/res/layout/fragment_goldscroll.xml
@@ -29,7 +29,7 @@
         </RelativeLayout>
     </ScrollView>
     <com.wuxiantao.wxt.ui.custom.button.StateButton
-        android:id="@+id/sbt_startHall"
+        android:id="@+id/sbt_hecheng"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_37"
         android:layout_alignParentBottom="true"
@@ -38,7 +38,6 @@
         android:layout_marginTop="@dimen/dp_12"
         android:layout_marginRight="@dimen/dp_48"
         android:layout_marginBottom="@dimen/dp_29"
-        android:enabled="false"
         android:padding="0dp"
         android:text="@string/pointtocard_text10"
         android:textSize="@dimen/sp_16"
