--- a/app/src/main/res/layout/fragment_scrapingcard.xml
+++ b/app/src/main/res/layout/fragment_scrapingcard.xml
@@ -156,38 +156,45 @@
                     android:layout_height="@dimen/dp_7"
                     android:background="@color/color_faf6f5" />
 
-
-                <RelativeLayout
+                <LinearLayout
+                    android:id="@+id/lt_scardget"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_24"
-                    android:layout_marginBottom="@dimen/dp_23"
-                    android:paddingLeft="@dimen/dp_10"
-                    android:paddingRight="@dimen/dp_14">
-
-                    <TextView
-                        android:layout_width="wrap_content"
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:drawableLeft="@drawable/main_scrapcard_line"
-                        android:drawablePadding="@dimen/dp_2"
-                        android:text="@string/taskhall_text18"
-                        android:textColor="@color/color_3a3a3a"
-                        android:textSize="@dimen/sp_15" />
+                        android:layout_marginTop="@dimen/dp_24"
+                        android:layout_marginBottom="@dimen/dp_23"
+                        android:paddingLeft="@dimen/dp_10"
+                        android:paddingRight="@dimen/dp_14">
 
-                    <TextView
-                        android:id="@+id/tv_more"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:text="@string/taskhall_text19"
-                        android:textColor="@color/color_999"
-                        android:textSize="@dimen/sp_12" />
-                </RelativeLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableLeft="@drawable/main_scrapcard_line"
+                            android:drawablePadding="@dimen/dp_2"
+                            android:text="@string/taskhall_text18"
+                            android:textColor="@color/color_3a3a3a"
+                            android:textSize="@dimen/sp_15" />
 
-                <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
-                    android:id="@+id/rv_scrapingcard_two"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                        <TextView
+                            android:id="@+id/tv_more"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:text="@string/taskhall_text19"
+                            android:textColor="@color/color_999"
+                            android:textSize="@dimen/sp_12" />
+                    </RelativeLayout>
+
+                    <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
+                        android:id="@+id/rv_scrapingcard_two"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+
             </LinearLayout>
         </com.wuxiantao.wxt.ui.custom.scrollview.CustomScrollView>
 
